# slychat

./: Cargo.toml
slychat_client/: Cargo.toml
slychat_client/src/: main.rs
slychat_common/: Cargo.toml
slychat_common/src/: encryption.rs  lib.rs  transport.rs  types.rs
slychat_server/: Cargo.toml
slychat_server/src/: chatroom.rs  listeners.rs  main.rs  server.rs  user.rs
