[workspace]
members = ["slychat_server", "slychat_client", "slychat_common"]

[workspace.dependencies]
serde = { version = "1.0.145", features = ["derive"] }
openssl = "0.10.42"
tokio = { version = "1.21.2", features = ["full"] }
bytes = "1"
serde_json = "1.0.86"
tokio-util = { version = "0.7.4", features = ['codec'] }
tokio-serde = { version = "0.8.0", featues = ['json'] }
futures = "0.3"
bimap = "0.6.2"
