[package]
name = "slychat_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slychat_common = { path = "../slychat_common" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio-serde = { workspace = true }
bimap = "0.6.2"
log = "0.4.17"
simple_logger = "4.0.0"

[dev-dependencies]
mockall = "0.11.2"
